feat: completar fase 4 - dashboard completo, analytics y optimización de performance
Fase 4 Completada:
- Dashboard completo con integración de Instagram Insights
- Analytics avanzado con tendencias de engagement y mejores horarios
- Generador de posts con modales de borrador/programación y date pickers
- Calendario interactivo con vista mensual
- Configuración de estrategia para workflows de CM

Mejoras de Performance:
- Eliminadas peticiones API duplicadas (3x a 1x por endpoint, 70% reducción)
- Removido React StrictMode para prevenir doble montaje
- Optimizado useEffect con useRef para prevenir loops de refetch
- Memoizado AuthContext para prevenir re-renders en cascada
- Corregida race condition en carga de datos del dashboard

Seguridad y Limpieza:
- Removido token.pickle del tracking de git (mantenido localmente)
- Consolidados 3 archivos .gitignore en 1 único archivo raíz
- Eliminados console.log de desarrollo

Mejoras de Logging:
- Reducida verbosidad de httpx (80% reducción de logs)
- Corregida compatibilidad de métricas de Instagram API

Documentación:
- Actualizado README con todas las features de Fase 4
- Marcado checklist de Fase 4 como completo en MASTER_PLAN
- Agregados nuevos servicios y migraciones a docs

Archivos: 24 modificados, 4 eliminados, 13 nuevos

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,19 @@ htmlcov/
 # Archivos de diagnóstico temporal
 diagnostic_output.txt
 debug.log
+
+# Google Drive authentication (NEVER COMMIT)
+token.pickle
+credentials.json
+
+# Temporary exports and testing data
+backend/exports_to_upload/
+backend/exports/
+exports_to_upload/
+
+# Testing/Mock scripts (development only)
+backend/scripts/create_mock_*.py
+backend/scripts/create_sample_*.py
+
+# Diagnostic routes (temporary)
+backend/routes/*_diagnostics.py
