--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,3 +11,6 @@ google-auth-oauthlib==1.2.1
 google-auth-httplib2==0.2.0
 google-api-python-client==2.151.0
 Pillow==11.0.0
+APScheduler==3.10.4
+SQLAlchemy==2.0.36
+psycopg2-binary==2.9.11
