feat: implement end-to-end testing with Playwright
- Added E2E testing framework using Playwright.
- Created README.md for E2E testing instructions.
- Implemented authentication tests in auth.spec.ts.
- Developed dashboard tests in dashboard.spec.ts.
- Added test user fixtures for E2E tests.
- Created authentication helper functions for login/logout.
- Updated package.json and package-lock.json to include Playwright dependencies.
- Configured Playwright settings in playwright.config.ts.
- Enhanced Analytics component to handle new insights data.
- Updated Dashboard component to display last sync time.
- Improved CSS styles for sync section in Dashboard.
- Added Vitest configuration for unit testing.

--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,12 @@ coverage/
 *.py,cover
 htmlcov/
 
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
+.auth/
+
 # ============================================
 # Temporary files
 # ============================================
@@ -145,3 +151,11 @@ backend/scripts/create_sample_*.py
 
 # Diagnostic routes (temporary)
 backend/routes/*_diagnostics.py
+
+# Temporary test/debug scripts
+backend/test_*.py
+backend/check_*.py
+
+# Claude Code sessions (opcional - descomentar si no quieres commitear)
+# .claude/sessions/
+# .claude/doc/
