--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,15 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:headed": "playwright test --headed",
+    "playwright:install": "playwright install --with-deps chromium"
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
@@ -22,7 +30,9 @@
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.2",
     "@eslint/js": "^9.29.0",
+    "@playwright/test": "^1.56.1",
     "@types/react": "^19.1.8",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.6",
