--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "react-bootstrap": "^2.10.10",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.2",
